--- a/item.html
+++ b/item.html
@@ -189,7 +189,9 @@
 						<hr>
 						<p class="card-text"><span>Dimensioni:</span> <b>340(h) x 440(b)</b></p>
 						<hr>
-						<p class="card-text"><span>Materiali e tecnica:</span> <b>collage e colori acrilici su carta</b></p>
+						<p class="card-text"><span>Materiali e tecnica:</span> <b><a href="http://vocab.getty.edu/page/aat/300182574" target="_blank" title="Vocabolario controllato Getty">collage e colori acrilici su carta<sup>AAT</sup></a></b></p>
+						<hr>
+						<p class="card-text"><span>Scheda identificativa:</span> <b><a href="http://www.mambo-bologna.org/collezioneonline/collezionecontemporanea/opera-1106/" target="_blank" title="Scheda identificativa dell'opera">Scheda Funerale di Togliatti<sup>Scheda ufficiale MAMbo</sup></a></b></p>
 						<hr>
 						<p class="card-text"><span>Istituzione fornitrice:</span> <b><a
 						    href="http://www.mambo-bologna.org/" target="_blank"
